kubernetes/prod/app-prod-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - name: flask-app
      port: 5002
      targetPort: 5002
