kubernetes/prod/app-prod-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: app-prod-service-nodeport-flask
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - port: 5002
      targetPort: 5002
